# bird

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  GOOGLE_CALENDAR_EXAMPLES.md  GOOGLE_CALENDAR_IMPLEMENTATION_SUMMARY.md  GOOGLE_CALENDAR_QUICK_REFERENCE.md  GOOGLE_CALENDAR_SETUP.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/agents/: mcp-productivity-architect.md
src/bird_mcp/: __init__.py  __main__.py  anki_tools.py  google_calendar_tools.py  obsidian_tools.py  server.py  todoist_tools.py  utils.py
